--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-faiss-cpu
-groq
-langchain-groq
-PyPDF2
-langchain_google_genai
-langchain
 streamlit
-langchain_community
-python-dotenv
-pypdf
-requests
-urllib
-google-cloud-aiplatform
+faiss-cpu
+langchain
+langchain-groq
+google-generativeai
+langchain-community
+langchain_google_genai
+chromadb
+groq
+PyPDF2
